
PROJECT(openservo)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

INCLUDE(GNUInstallDirs)
INCLUDE(CMakePackageConfigHelpers)

set(PROJECT_VERSION 0.1.0)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})

ADD_LIBRARY(openservo SHARED src/openservo.cpp src/i2c.c)

INSTALL(TARGETS openservo EXPORT openservo_targets DESTINATION ${CMAKE_INSTALL_LIBDIR})
INSTALL(FILES src/openservo.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

SET_TARGET_PROPERTIES(openservo PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION 1)

SET(LIB_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR})
SET(INCLUDE_INSTALL_DIR ${CMAKE_INSTALL_INCLUDEDIR})

configure_package_config_file(OpenServoConfig.cmake.in
    ${PROJECT_BINARY_DIR}/OpenServoConfig.cmake
    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/OpenServo
    PATH_VARS LIB_INSTALL_DIR INCLUDE_INSTALL_DIR)

write_basic_package_version_file(
    ${PROJECT_BINARY_DIR}/OpenServoConfig-version.cmake
    VERSION ${PROJECT_VERSION}
    COMPATIBILITY SameMajorVersion)

INSTALL(FILES
    ${CMAKE_CURRENT_BINARY_DIR}/OpenServoConfig.cmake
    ${CMAKE_CURRENT_BINARY_DIR}/OpenServoConfig-version.cmake
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/OpenServo)

INSTALL(
    EXPORT openservo_targets
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/OpenServo
    FILE OpenServo-targets.cmake
)

