
PROJECT(openservo)
CMAKE_MINIMUM_REQUIRED(VERSION 3.0 FATAL_ERROR)

INCLUDE(GNUInstallDirs)

SET(CMAKE_CXX_STANDARD 11)

SET(PROJECT_VERSION 0.2.0)

OPTION(BUILD_MPSSE "Build with support for MPSSE devices" OFF)
OPTION(BUILD_TOOLS "Build OpenServo tools" ON)
OPTION(BUILD_DEBUG "Build with debug support" OFF)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})

SET(LIBRARY_SOURCES src/openservo.cpp src/i2c.c src/debug.c)

IF (BUILD_MPSSE)
    FIND_PACKAGE(LibFTDI1 REQUIRED)
    LIST(APPEND LIBRARY_SOURCES src/mpsse.c)
    ADD_DEFINITIONS(-D_BUILD_MPSSE)
    SET(LIBRARIES ${LIBFTDI_LIBRARIES})
    INCLUDE_DIRECTORIES(${LIBFTDI_INCLUDE_DIRS})
ENDIF(BUILD_MPSSE)

if(BUILD_DEBUG)
    add_definitions(-DOPENSERVO_DEBUG)
    add_definitions(-DOPENSERVO_SOURCE_COMPILE_ROOT="${CMAKE_CURRENT_SOURCE_DIR}/src/")
endif()

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/ ${CMAKE_CURRENT_SOURCE_DIR}/include/)

ADD_LIBRARY(openservo SHARED ${LIBRARY_SOURCES})

INSTALL(TARGETS openservo EXPORT openservo_targets DESTINATION ${CMAKE_INSTALL_LIBDIR})
INSTALL(FILES include/openservo.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

SET_TARGET_PROPERTIES(openservo PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION 1)

INCLUDE(CMakePackageConfigHelpers)

SET(LIB_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR})
SET(INCLUDE_INSTALL_DIR ${CMAKE_INSTALL_INCLUDEDIR})


IF (BUILD_TOOLS)
ADD_EXECUTABLE(openservo_control src/tools/control.cpp)
TARGET_LINK_LIBRARIES(openservo_control openservo ${LIBRARIES})
ENDIF()

configure_package_config_file(OpenServoConfig.cmake.in
    ${PROJECT_BINARY_DIR}/OpenServoConfig.cmake
    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/OpenServo
    PATH_VARS LIB_INSTALL_DIR INCLUDE_INSTALL_DIR)

write_basic_package_version_file(
    ${PROJECT_BINARY_DIR}/OpenServoConfig-version.cmake
    VERSION ${PROJECT_VERSION}
    COMPATIBILITY SameMajorVersion)

INSTALL(FILES
    ${CMAKE_CURRENT_BINARY_DIR}/OpenServoConfig.cmake
    ${CMAKE_CURRENT_BINARY_DIR}/OpenServoConfig-version.cmake
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/OpenServo)

INSTALL(
    EXPORT openservo_targets
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/OpenServo
    FILE OpenServo-targets.cmake
)

